Bug 390901 - Imported classes from file do not show available associations
Summary: Imported classes from file do not show available associations
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.2 (KDE Applications 17.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-22 12:43 UTC by Ralf Habacker
Modified: 2018-02-22 12:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-22 12:43:07 UTC
With bug 380266 support for adding classes by text files has been added. An issue with this support is that for imported UML objects present associations are not been added by default.

How to reproduce ?
1. start umbrello
2. add two classes 'A' and 'B' and let class 'A' derive from class 'B'
3. remove class 'B' from diagram
4. create a new text file and enter 'B' into 
5. right click on the class diagram and select 'New'->'from file'
6. select created file in step 4.

What happens ?
class B has been added but the association to A is not displayed

What is expected ?
The association between both classes should be displayed
Comment 1 Ralf Habacker 2018-02-22 12:45:08 UTC
Git commit 02696cb8fd716b7203ee7d0955a79ef4ee2688f8 by Ralf Habacker.
Committed on 22/02/2018 at 12:44.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Imported classes from file do not show available associations'
FIXED-IN:2.24.3 (KDE Applications 17.12.3)

M  +3    -2    umbrello/diagram_utils.cpp

https://commits.kde.org/umbrello/02696cb8fd716b7203ee7d0955a79ef4ee2688f8