Fix 'Imported classes from file do not show available associations'

BUG:390901
FIXED-IN:2.24.3 (KDE Applications 17.12.3)